[gd_scene load_steps=5 format=2]

[ext_resource path="res://emots.gd" type="Script" id=1]
[ext_resource path="res://main_controller.gd" type="Script" id=2]
[ext_resource path="res://point.gd" type="Script" id=3]
[ext_resource path="res://bingkai.gd" type="Script" id=4]

[node name="main" type="Node2D"]
script = ExtResource( 2 )

[node name="Menu" type="CanvasLayer" parent="."]

[node name="ControlNode" type="Node2D" parent="Menu"]

[node name="EmotButton" type="Button" parent="Menu/ControlNode"]
margin_left = 95.0
margin_top = 56.0
margin_right = 292.0
margin_bottom = 107.0
rect_pivot_offset = Vector2( 182, 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Menu/ControlNode/EmotButton"]
margin_left = 57.0
margin_top = 17.0
margin_right = 147.0
margin_bottom = 38.0
text = "Show Emots"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointButton" type="Button" parent="Menu/ControlNode"]
margin_left = 95.0
margin_top = 126.0
margin_right = 292.0
margin_bottom = 177.0
rect_pivot_offset = Vector2( 182, 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Menu/ControlNode/PointButton"]
margin_left = 57.0
margin_top = 17.0
margin_right = 147.0
margin_bottom = 38.0
text = "Show Pixel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BingkaiButton" type="Button" parent="Menu/ControlNode"]
margin_left = 95.0
margin_top = 195.0
margin_right = 292.0
margin_bottom = 246.0
rect_pivot_offset = Vector2( 182, 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Menu/ControlNode/BingkaiButton"]
margin_left = 57.0
margin_top = 17.0
margin_right = 147.0
margin_bottom = 38.0
text = "Show Bingkai"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Menu/ControlNode"]
margin_left = 97.7621
margin_top = 275.584
margin_right = 339.762
margin_bottom = 335.584
text = "Muhamamad Fauzan Lubis
191524026
D4-2A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Emots" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="EmotsBackButton" type="Button" parent="Emots"]
margin_left = 810.0
margin_top = 20.0
margin_right = 1007.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( 182, 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Emots/EmotsBackButton"]
margin_left = 80.0
margin_top = 18.0
margin_right = 170.0
margin_bottom = 39.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Point" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="PointBackButton" type="Button" parent="Point"]
margin_left = 810.0
margin_top = 20.0
margin_right = 1007.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( 182, 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Point/PointBackButton"]
margin_left = 80.0
margin_top = 18.0
margin_right = 170.0
margin_bottom = 39.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearButton" type="Button" parent="Point"]
margin_left = 806.822
margin_top = 534.899
margin_right = 1003.82
margin_bottom = 585.899
rect_pivot_offset = Vector2( 182, 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Point/ClearButton"]
margin_left = 58.8107
margin_top = 18.0
margin_right = 148.811
margin_bottom = 39.0
text = "Clear Canvas"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Point"]
margin_left = 17.0
margin_top = 543.0
margin_right = 336.0
margin_bottom = 583.0
text = "Klik untuk menggambar pixel!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bingkai" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="PointBackButton2" type="Button" parent="Bingkai"]
margin_left = 810.0
margin_top = 20.0
margin_right = 1007.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( 182, 51 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Bingkai/PointBackButton2"]
margin_left = 80.0
margin_top = 18.0
margin_right = 170.0
margin_bottom = 39.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/ControlNode/EmotButton" to="." method="_on_EmotButton_pressed"]
[connection signal="pressed" from="Menu/ControlNode/PointButton" to="." method="_on_PointButton_pressed"]
[connection signal="pressed" from="Menu/ControlNode/BingkaiButton" to="." method="_on_BingkaiButton_pressed"]
[connection signal="pressed" from="Emots/EmotsBackButton" to="." method="_on_EmotsBackButton_pressed"]
[connection signal="pressed" from="Point/PointBackButton" to="." method="_on_PointBackButton_pressed"]
[connection signal="pressed" from="Point/ClearButton" to="Point" method="_on_ClearButton_pressed"]
[connection signal="pressed" from="Bingkai/PointBackButton2" to="." method="_on_PointBackButton2_pressed"]
